crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__empty_statement_comments.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
class C { void m(boolean ready) { while (ready) ; // keep
} }

formatted:
class C {
  void m(boolean ready) {
    while (ready) {
      // keep
    }
  }
}

diagnostics:
(none)
