crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__enum_pattern_and_for_lists.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
enum E { A, /* enum */ , B }
record Point(int x, int y) {}
class C { void m(Object value) { if (value instanceof Point(int x, /* pattern */ , int y)) {} for (i = 0, /* init */ , j = 0; ; i++, /* update */ , j++) {} } }

formatted:
enum E {
  A, /* enum */
  ,
  B,
}

record Point(int x, int y) {
}

class C {
  void m(Object value) {
    if (value instanceof Point(int x, /* pattern */  , int y)) {
    }
    for (i = 0, /* init */  , j = 0; ; i++, /* update */  , j++) {
    }
  }
}

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(23), end: TextSize(24) }) message=expected enum constant name
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(140), end: TextSize(141) }) message=expected type
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(140), end: TextSize(141) }) message=expected variable name
code=java.parse.invalid_statement_expression severity=Error stage=Parser range=Some(TextRange { start: TextSize(176), end: TextSize(177) }) message=expected statement expression
code=java.parse.invalid_statement_expression severity=Error stage=Parser range=Some(TextRange { start: TextSize(205), end: TextSize(206) }) message=expected statement expression
