crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__eof_comments.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
// JOLT-TRIVIA:eof-leading
/* JOLT-TRIVIA:eof-trailing */

formatted:
// JOLT-TRIVIA:eof-leading
/* JOLT-TRIVIA:eof-trailing */

diagnostics:
(none)
