crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__expressions.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
class RecoveredExpressions {
  int negative = - -1;
  int positive = + +1;

  void lambdasAndArrays() {
    java.util.function.Function<Integer, Integer> conciseRecovered =
        item /* lambda-concise-sibling */ @ -> item;
    java.util.function.Function<Integer, Integer> parenthesizedRecovered =
        (item, /* lambda-parameter-sibling */ ,) -> item;
    java.util.function.Function<Integer, Integer> trailingLineComment =
        (first, second // lambda-last-parameter
        ) -> first;
    java.util.function.Function<Integer, Integer> trailingBlockComment =
        (first, second/* lambda-last-block */
        ) -> first;
    java.util.function.Function<Integer, Integer> closeLeadingComment =
        (first, second
        // lambda-close-leading
        ) -> first;
    int @Dimension [] array = new int[1] @Trailing [];
  }

  void methodReferences() {
    Object parenthesized = (/* receiver */)::target;
    Object primitive = void::target;
    Object postfix = value++::target;
    Object nested = value::target::nested;
  }

  void classLiterals() {
    Class<?> arrayType = String[].class;
    Class<?> objectCreation = new Object().class;
    Class<?> parenthesized = (value).class;
    Class<?> parenthesizedField = (value).field.class;
    Class<?> objectField = new Object().field.class;
    Class<?> literal = 1 .class;
    Class<?> voidArray = void[].class;
  }

  void memberComments() {
    Object
        // first suffix
        .something()
        .more();
  }

  boolean patterns(Object value) {
    boolean typed = value instanceof final @Readonly String item @Dimension [];
    boolean record = value instanceof Point(String name, Point(Integer x, _));
    boolean missingName = value instanceof Point(String);
    boolean invalidInitializer = value instanceof Point(String name = other);
    boolean invalidVar = value instanceof var item;
    boolean extraDeclarator = value instanceof Point(String first, second);
    boolean invalidRecordType = value instanceof int(String name);
    return typed || record || missingName || invalidInitializer || invalidVar || extraDeclarator || invalidRecordType;
  }
}

formatted:
class RecoveredExpressions {
  int negative = - -1;
  int positive = + +1;

  void lambdasAndArrays() {
    java.util.function.Function<Integer, Integer> conciseRecovered =
      item /* lambda-concise-sibling */ @ -> item;
    java.util.function.Function<Integer, Integer> parenthesizedRecovered =
      (item, /* lambda-parameter-sibling */ ,) -> item;
    java.util.function.Function<Integer, Integer> trailingLineComment =
      (
        first,
        second // lambda-last-parameter
      ) -> first;
    java.util.function.Function<Integer, Integer> trailingBlockComment =
      (first, second /* lambda-last-block */) -> first;
    java.util.function.Function<Integer, Integer> closeLeadingComment =
      (
        first,
        second
      // lambda-close-leading
      ) -> first;
    int @Dimension [] array = new int[1] @Trailing [];
  }

  void methodReferences() {
    Object parenthesized = ( /* receiver */ )::target;
    Object primitive = void::target;
    Object postfix = value++::target;
    Object nested = value::target::nested;
  }

  void classLiterals() {
    Class<?> arrayType = String[].class;
    Class<?> objectCreation = new Object().class;
    Class<?> parenthesized = (value).class;
    Class<?> parenthesizedField = (value).field.class;
    Class<?> objectField = new Object().field.class;
    Class<?> literal = 1 .class;
    Class<?> voidArray = void[].class;
  }

  void memberComments() {
    Object
      // first suffix
      .something()
      .more();
  }

  boolean patterns(Object value) {
    boolean typed = value instanceof final @Readonly String item @Dimension [];
    boolean record = value instanceof Point(String name, Point(Integer x, _));
    boolean missingName = value instanceof Point(String );
    boolean invalidInitializer = value instanceof Point(String name = other);
    boolean invalidVar = value instanceof var item;
    boolean extraDeclarator = value instanceof Point(String first, second );
    boolean invalidRecordType = value instanceof int(String name);
    return typed
      || record
      || missingName
      || invalidInitializer
      || invalidVar
      || extraDeclarator
      || invalidRecordType;
  }
}

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(215), end: TextSize(216) }) message=unexpected token in expression
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(347), end: TextSize(348) }) message=expected lambda parameter name
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(915), end: TextSize(916) }) message=expected expression
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(949), end: TextSize(953) }) message=expected expression
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(953), end: TextSize(955) }) message=expected valid method reference receiver
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(991), end: TextSize(993) }) message=expected valid method reference receiver
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1034), end: TextSize(1036) }) message=expected valid method reference receiver
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1158), end: TextSize(1163) }) message=expected type name before class literal
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1202), end: TextSize(1207) }) message=expected type name before class literal
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1257), end: TextSize(1262) }) message=expected type name before class literal
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1310), end: TextSize(1315) }) message=expected type name before class literal
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1343), end: TextSize(1348) }) message=expected type name before class literal
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1375), end: TextSize(1379) }) message=expected expression
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1382), end: TextSize(1387) }) message=expected type name before class literal
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1747), end: TextSize(1748) }) message=expected pattern variable name
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1818), end: TextSize(1819) }) message=invalid type pattern declaration
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1870), end: TextSize(1873) }) message=expected reference type
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1953), end: TextSize(1954) }) message=expected pattern variable name
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(2005), end: TextSize(2008) }) message=expected class or interface type
