crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__import_after_removed_separator_comments.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
package p;

import z.Zeta;

// Rides on a redundant separator that is removed, so it reads as the leading
// trivia of the import that follows. That import carries recovery and cannot
// prove it is sortable, so the comments stay a barrier ahead of it rather than
// travelling with it -- but they still lead it directly, so no blank line is
// invented between them, matching the sortable path.
;

import a.;

// Same, with the separator's comments and the import already adjacent.
;
import b.;

class ImportAfterRemovedSeparatorComments {}

formatted:
package p;

import z.Zeta;

// Rides on a redundant separator that is removed, so it reads as the leading
// trivia of the import that follows. That import carries recovery and cannot
// prove it is sortable, so the comments stay a barrier ahead of it rather than
// travelling with it -- but they still lead it directly, so no blank line is
// invented between them, matching the sortable path.
import a.;

// Same, with the separator's comments and the import already adjacent.
import b.;

class ImportAfterRemovedSeparatorComments {
}

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(407), end: TextSize(408) }) message=unexpected token in import declaration
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(493), end: TextSize(494) }) message=unexpected token in import declaration
