crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__import_trailing_tokens.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
import com.example + lost;

class ImportTrailingTokens {}

formatted:
import com.example+ lost;

class ImportTrailingTokens {
}

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(19), end: TextSize(20) }) message=unexpected token in import declaration
