crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__incomplete_module_directive.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
module recovery.directive {
  requires /* JOLT-TRIVIA:module-directive */ ;
}

formatted:
module recovery.directive {
  requires /* JOLT-TRIVIA:module-directive */ ;
}

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(74), end: TextSize(75) }) message=expected identifier
